# query-analysis-plot-agent

./: .gitignore  README.md  app.py  cli.py  index.html  pyproject.toml  requirements.txt  uv_install.sh
config/: databases.yaml  permissions.yaml
frontend/: index.html
notebooks/: explore_data.ipynb  utils.py
src/: analysis_agent.py  conversation_manager.py  database_manager.py  intent_classifier.py  langgraph_orchestrator.py  models.py  orchestrator.py  visualization_agent.py
tests/: test_analysis_agent.py  test_functional_chinook.py  test_langgraph_orchestrator.py  test_models.py  test_visualization_agent.py  tests.py
