[project]
name = "query-analysis-plot-agent"
version = "0.1.0"
description = "Intelligent data analysis system that converts natural language queries into SQL, executes them, generates insights, and creates visualizations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core data / plotting
    "numpy>=1.26.0,<2.0.0",
    "pandas==2.3.3",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "plotly==6.3.1",
    
    # LangChain & LangGraph ecosystem
    "langchain==0.2.16",
    "langchain-core==0.2.39",
    "langchain-openai==0.1.23",
    "langgraph==0.2.28",
    "langfuse==2.35.0",
    
    # LLM / OpenAI
    "openai==1.109.1",
    "tiktoken==0.12.0",
    
    # Utilities / tooling
    "python-dotenv==1.2.1",
    "pyyaml==6.0.2",
    "pytest==8.4.2",
    
    # Dev / notebook
    "jupyter==1.0.0",
    
    # Web Framework (for UI)
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "jupyter==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]
